--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
         "league/flysystem-aws-s3-v3": "3.0",
+        "meilisearch/meilisearch-php": "^1.12",
         "predis/predis": "2.0",
         "tymon/jwt-auth": "^2.1"
     },
